--- a/index.html
+++ b/index.html
@@ -12,4 +12,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.</p>
 </body>
+<footer>
+    <p>CopyRight &copy; 2024</p>
+</footer>
 </html>
